--- a/furbot_description/package.xml
+++ b/furbot_description/package.xml
@@ -10,6 +10,7 @@
   <license>TODO</license>
   <buildtool_depend>ament_cmake</buildtool_depend>
   <depend>urdf</depend>
+  <exec_depend>joint_state_publisher</exec_depend>
   <export>
     <build_type>ament_cmake</build_type>
   </export>
