--- a/furbot_simulation/package.xml
+++ b/furbot_simulation/package.xml
@@ -14,6 +14,7 @@
   <exec_depend>webots_ros2_control</exec_depend>
   <exec_depend>diff_drive_controller</exec_depend>
   <exec_depend>joint_state_broadcaster</exec_depend>
+  <exec_depend>robot_state_publisher</exec_depend>
 
   <test_depend>ament_copyright</test_depend>
 
